--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -19,6 +19,14 @@
     #page-home main{
         align-items: center;
     }
+
+    #page-search-results .cards {
+        grid-template-columns: 1fr;
+    }
+
+    #page-search-results .cards img {
+        height: 200px;
+    }
 }
 
 @media(min-widght: 1700px){
@@ -30,5 +38,5 @@
 @media(max-height: 760px){
     #page-home {
         background-position-y: 200px;
-    }
+    } 
 }
